--- a/src/app/user/work/carousel/carousel.component.html
+++ b/src/app/user/work/carousel/carousel.component.html
@@ -6,19 +6,31 @@
         <div class="app" 
         *ngFor='let app of apps; index as i' 
         [style.z-index]="100 - getAbsolute(i - currentApp) * 2"
-        [style.left]="(i - currentApp) * 10 + 50 + '%'"
-        [style.top]="getAbsolute(i - currentApp) * (-5) + 50 +'%'"
-        [ngStyle]="{'transform':'scale('+ (1 - getAbsolute(i - currentApp) /4 ) + ') translate(-50%,-50%) ' }"
+        [style.left]="(i - currentApp) * 15 + 50 + '%'"
+        [style.top]=" 50 +'%'"
         [class]="'type-'+getTypeNumber(app.type)"
         [ngClass]="(i - currentApp) === 0 ? 'active' : 'inactive'"
         (click)='focusOn(i)'>
             <span class="cover"
-            [style.opacity]="(getAbsolute(i - currentApp) * 6 + 50) + '%'"></span>
+            [style.opacity]="(getAbsolute(i - currentApp) * 16 + 50) + '%'"></span>
             <img [src]="app.image" alt="" class="image">
             <span class="title">{{app.name}}</span>
+            <div class="description">
+                <span>{{app.description}}</span>
+                <div class="buttons">
+                    <button>
+                        <img src="assets/icons/code.svg" alt="">
+                    </button>
+                    <button>
+                        <img src="assets/icons/link.svg" alt="">
+                    </button>
+                </div>
+            </div>
         </div>        
     </div>
 <!-- 
+    getAbsolute(i - currentApp) * (-5) +
+        [ngStyle]="{'transform':'scale('+ (1 - getAbsolute(i - currentApp) /3 ) + ') translate(-50%,-50%) ' }"
     + getAbsolute(i - currentApp) * 17
     [style.opacity]="-getAbsolute(i - currentApp) * 27 + 100 + '%'"
     [style]='{left: (i - currentApp)*15 + 50 + "%", opacity: -getAbsolute(i)*27 + 100 + "%", height: 200 + "px"}' 
