--- a/src/app/user/work/work.component.html
+++ b/src/app/user/work/work.component.html
@@ -8,4 +8,13 @@
         {{option}}
     </button>
 </div>
-<app-carousel></app-carousel>
+<div class="wrapper">
+    <div *ngIf="selectedOption === 0">
+        <app-carousel></app-carousel>
+    </div>
+    <div *ngIf="selectedOption === 1">
+        <app-list></app-list>
+    </div>
+</div>
+
+
