--- a/src/app/user/work/work.component.scss
+++ b/src/app/user/work/work.component.scss
@@ -40,9 +40,13 @@ $button-width: 180px;
     }
 }
 
-#canvas{
-    position: absolute;
+.wrapper{
     z-index: 1;
+}
+
+#canvas{
+    position: fixed;
+    z-index: -1;
     top: 0;
     left: 0;
 }
