--- a/src/app/user/work/carousel/carousel.component.html
+++ b/src/app/user/work/carousel/carousel.component.html
@@ -1,30 +1,25 @@
 <main>
-    <button class="arrow left" (click)="prevApp()"></button>
-    <div class="apps">
+    <div class="apps-carousel">
         <div class="app" 
         *ngFor='let app of apps; index as i' 
         [style.z-index]="100 - getAbsolute(i - currentApp) * 2"
-        [style.left]="(i - currentApp) * 20 + 50 + '%'"
-        [style.top]=" 50 +'%'"
-        [class]="'type-'+getTypeNumber(app.type)"
+        [style.left]="25 + '%'"
+        [style.top]=" 30 + (i - currentApp) * 40 +'%'"
+        [style.filter]="'grayscale(' + (getAbsolute(i - currentApp) * 10 + 50) + '%) blur(2px)'"
+        [class]="'type-' + getTypeNumber(app.type) + ' app-' + i"
         [ngClass]="(i - currentApp) === 0 ? 'active' : 'inactive'"
         (click)='focusOn(i)'>
+        <!-- [style.transform]="'perspective(1000px) translateX(0) translateY(0) translateZ(' + (10 - getAbsolute(i - currentApp) * 300) + 'px)'" -->
             <span class="cover"
-            [style.opacity]="(getAbsolute(i - currentApp) * 16 + 50) + '%'"></span>
+            [style.opacity]="(getAbsolute(i - currentApp) * 10 + 50) + '%'"></span>
             <img [src]="app.image" alt="" class="image">
-            <span class="title">{{app.name}}</span>
-            <div class="description">
-                <span>{{app.description}}</span>
-                <div class="buttons">
-                    <button>
-                        <img src="assets/icons/code.svg" alt="">
-                    </button>
-                    <button>
-                        <img src="assets/icons/link.svg" alt="">
-                    </button>
-                </div>
-            </div>
         </div>        
     </div>
-    <button class="arrow right" (click)="nextApp()"></button>
+    <div class="app-about-wrap">
+        <div class="app-about">
+            <div class="title">
+                {{apps[currentApp].name}}
+            </div>
+        </div>
+    </div>
 </main>
