--- a/src/app/user/work/carousel/carousel.component.scss
+++ b/src/app/user/work/carousel/carousel.component.scss
@@ -1,208 +1,103 @@
-$border-size: 4px;
-
 main{
     width: 100%;
     height: 100vh;
+    overflow: hidden;
+    display: flex;
+}
+.apps-carousel{
+    width: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
+    height: 100%;
+    position: relative;
 
-    >*{
-        position: relative;
-    }
-
-    .arrow{
-        padding: 0.5rem;
-        cursor: pointer;
-        background-color: transparent;
-        border: none;
-        height: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 5%;
-        transition: 0.2s ease;
+    .app{
+        height: calc(250px + 13vh);
+        // width: calc(400px + 10vw);
         position: absolute;
-        top: 0;
-        z-index: 100;
+        transition: 0.3s ease all;
 
-        &.left{
+        .cover{
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            top: 0;
             left: 0;
+            background-color: var(--colorBackground);
+            pointer-events: none;
         }
 
-        &.right{
-            right: 0;
+        .image{
+            height: 100%;
         }
 
-        &:hover{
-            background-color: rgba(0, 0, 0, 0.082);
+        &.inactive{
+            box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.082);
+
+            &:hover{
+                cursor: pointer;
+            }
         }
 
-        img{
-            height: 1.5rem;
+        &.active{
+            box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.24);
+            filter: none !important;
+            transform: perspective(1000px) translateX(0) translateY(0) translateZ(300px);
+            .cover{
+                opacity: 0 !important;
+            }
+        }
+
+        @for $i from 1 through 4 {
+            &.type-#{$i - 1} {
+                &.active{
+                    // background: linear-gradient(var(--colorAccent#{$i}), black);
+                    // background-color: var(--colorAccent#{$i});
+                    // border-right: 14px solid var(--colorAccent#{$i});
+                }
+            }
         }
     }
+}
 
-    .apps{
-        width: 100%;
-        display: flex;
-        overflow: hidden;
+.app-about-wrap{
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    height: 100%;
+    position: relative;
+
+    .app-about{
+        width: 600px;
+        height: 900px;
+        border: 6px solid rgb(70, 70, 70);
         position: relative;
-        height: 100%;
+        padding: 10px;
 
-        .app{
+        .title{
             position: absolute;
-            display: flex;
-            align-items: center;
-            flex-direction: column;
-            height: calc(200px + 10vh);
-            width: calc(160px + 10vw);
-            font-size: 1.3rem;
-            color: white;
-            top: 50%;
-            transform: translate(-50%,-50%);
-            transition: 0.6s;
-            background-color: rgb(70, 70, 70);
-            // background: linear-gradient(rgb(70, 70, 70), rgb(70, 70, 70));
-            box-shadow: 0 0 0 0 transparent;
-
-            &.active{
-                height: 100%;
-                width: calc(500px + 13vw);
-                border: 5px solid;
-                box-shadow: 0 0 20px 3px rgba(0, 0, 0, 0.212);
-
-                .cover{
-                   opacity: 0 !important; 
-                }
-
-                .title{                
-                    $font-title-color: white;
-                    $font-border-size: 5px;
-                    text-shadow: 
-                    -$font-border-size 0 $font-title-color,
-                    0 $font-border-size $font-title-color, 
-                    $font-border-size 0 $font-title-color, 
-                    0 0px -$font-border-size $font-title-color;
-                    font-size: 80px;
-                    color: black;
-                }
-
-                .description{
-                    height: 45%;
-                }
-            }
-
-            &.inactive{
-                // border-color: transparent !important;
-                cursor: pointer;
-                background-color: var(--colorBackground);
-                border: 4px solid rgb(70, 70, 70);
-
-                .title{
-                    opacity: 0;
-                }
-            }
-
-            @for $i from 1 through 4 {
-                &.type-#{$i - 1} {
-                    &.active{
-                        background: linear-gradient(var(--colorAccent#{$i}), black);
-                        // background-color: var(--colorAccent#{$i});
-                        border-color: var(--colorAccent#{$i});
-                    }
-
-                    .description{
-                        button{
-                            &:hover{
-                                background-color: var(--colorAccent#{$i});
-                            }
-                        }
-                    }
-                }
-            }
-
-            .title{
-                color: white;
-            }
-
-            .cover{
-                position: absolute;
-                /*
-                width: calc(100% + #{$border-size * 2});
-                height: calc(100% + #{$border-size * 2});
-                top: - $border-size;
-                left: - $border-size;
-                */
-                width: 100%;
-                height: 100%;
-                top: 0;
-                left: 0;
-                pointer-events: none;
-                background-color: var(--colorBackground);
-                z-index: 100;
-                transition: 0.2s ease;
-            }
-
-            .image{
-                box-shadow: 0 0 6px 1px rgba(0, 0, 0, 0.356);
-                width: 80%;
-                position: relative;
-                margin: 30px 10px;
-                border: 30px solid var(--colorPrimary);
-            }
-
-            .title{
-                font-size: 40px;
-            }
-
-            .description{
-                position: absolute;
-                left: 0;
-                bottom: 0;
-                height: 0;
-                width: 100%;
-                overflow: auto;
-                background-color: rgb(68, 68, 68);
-                transition: 0.6s;
-                box-shadow: 0 0 10px rgba(0, 0, 0, 0.5) inset;
-
-
-                span{
-                    padding: 30px;
-                    font-size: 24px;
-                    display: block;
-                }
-
-                .buttons{
-                    position: absolute;
-                    left: 0;
-                    bottom: 0;
-                    width: 100%;
-                    display: flex;
-                    flex-wrap: wrap;
-                    justify-content: space-around;
-                    align-items: center;
-
-                    button{
-                        border: none;
-                        background-color: white;
-                        padding: 10px 30px;
-                        display: flex;
-                        justify-content: center;
-                        align-items: center;
-                        width: 200px;
-                        margin: 30px 10px;
-                        font-size: 24px;
-
-                        img{
-                            width: 40px;
-                            height: 40px;
-                        }
-
-                    }
-                }
-            }
+            top: 0;
+            left: 50%;
+            padding: 10px;
+            background-color: var(--colorBackground);
+            transform: translate(-50%, -50%);
+            font-size: 60px;
+        }
+    
+        .tags{
+    
+        }
+    
+        .description{
+    
+        }
+    
+        .links{
+    
         }
     }
 }
