--- a/src/app/user/work/list/list.component.html
+++ b/src/app/user/work/list/list.component.html
@@ -1,21 +1,28 @@
 <div class="apps">
-    <div class="app" 
-    *ngFor='let app of apps; index as i' 
-    [class]="'type-' + getTypeNumber(app.type)"
-    [ngClass]="(i - currentApp) === 0 ? 'active' : 'inactive'">
-        <span class="cover"></span>
-        <img [src]="app.image" alt="" class="image">
-        <span class="title">{{app.name}}</span>
-        <div class="description">
-            <span>{{app.description}}</span>
-            <div class="buttons">
-                <button>
-                    <img src="assets/icons/code.svg" alt="">
-                </button>
-                <button>
-                    <img src="assets/icons/link.svg" alt="">
-                </button>
+    <!--
+        <button (click)="setupApps()"> test </button>   
+    -->
+    
+    <div class="app-wrap" *ngFor='let app of apps; index as i' >
+        <div class="app" 
+        [class]="'type-' + getTypeNumber(app.type)"
+        [id]="'app-' + i"
+        [ngClass]="(i - currentApp) === 0 ? 'active' : 'inactive'">
+            <span class="cover"></span>
+            <img [src]="app.image" alt="" class="image">
+            <span class="title">{{app.name}}</span>
+            <div class="description">
+                <span>{{app.description}}</span>
+                <div class="buttons">
+                    <button>
+                        <img src="assets/icons/code.svg" alt="">
+                    </button>
+                    <button>
+                        <img src="assets/icons/link.svg" alt="">
+                    </button>
+                </div>
             </div>
-        </div>
-    </div>        
+        </div>         
+    </div>
+       
 </div>
