--- a/src/app/user/work/list/list.component.scss
+++ b/src/app/user/work/list/list.component.scss
@@ -6,24 +6,87 @@
     display: flex;
     flex-wrap: wrap;
 
-    .app{  
-        width: calc(200px + 13vw);
+    .app-wrap{
         display: flex;
+        justify-content: center;
+        align-items: center;
+        width: calc(200px + 13vw);
+        height: calc(300px + 13vh);
+        position: relative;
         flex-grow: 1;
-        flex-direction: column;
-        height: 50%;
-        background-color: rgb(70, 70, 70);
-        overflow: hidden;
         margin: 20px;
+    }
+
+    .app{  
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        background-color: var(--colorBackground);
+        overflow: hidden;
+        position: relative;
+        transform-origin: center;
+        height: 100%;
+        transition: 0.3s all, 0.1s transform;
+        border: 1px solid rgb(70, 70, 70);
+        padding: 10px;
+
+        &:hover{
+            box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.281);
+            z-index: 99;
+            height: calc(500px + 20vh);
+            background-color: rgb(70, 70, 70);
+
+            .image{
+                box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.281);
+            }
+
+            .description{
+                height: 50%;
+            }
+        }
+
+        &:not(:hover){
+            transform: scale(1) rotateX(0) rotateY(0) !important;
+        }
 
         .image{
             width: 100%;
         }
 
+        .title{
+            font-size: 36px;
+            margin: 10px;
+        }
+
         .description{
+            width: 100%;
+            height: 0;
+            overflow: hidden;
+            position: relative;
+
             .buttons{
-                img{
-                    height: 50px;
+                position: absolute;
+                display: flex;
+                left: 0;
+                bottom: 10px;
+                width: 100%;
+                align-items: center;
+                justify-content: space-around;
+
+                button{
+                    border: none;
+                    background-color: white;
+                    padding: 10px 30px;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    width: 150px;
+                    margin: 30px 10px;
+                    font-size: 24px;
+
+                    img{
+                        height: 40px;
+                    }
                 }
             }
         }
