--- a/src/app/user/work/work.component.html
+++ b/src/app/user/work/work.component.html
@@ -5,15 +5,15 @@
     [ngClass]="selectedOption === i ? 'active':'inactive'"
     (click)="selectOption(i)"
     >
-        {{option}}
+        <img [class]="'option-img-' + i" alt="" src="assets/icons/link.svg">
     </button>
 </div>
 <div class="wrapper">
     <div *ngIf="selectedOption === 0">
-        <app-carousel></app-carousel>
+        <app-list></app-list>
     </div>
     <div *ngIf="selectedOption === 1">
-        <app-list></app-list>
+        <app-carousel></app-carousel>
     </div>
 </div>
 
