--- a/src/app/user/work/work.component.scss
+++ b/src/app/user/work/work.component.scss
@@ -1,5 +1,3 @@
-$button-width: 180px;
-
 .options{
     position: fixed;
     top: 50%;
@@ -9,17 +7,14 @@ $button-width: 180px;
     button{
         padding: 10px;
         position: relative;
-        margin: 10px;
         font-size: 26px;
         border: none;
         display: flex;
         justify-content: center;
         text-align: center;
-        left: -$button-width + 20px;
-        width: $button-width;
+        left: 0;
         border-radius: 5px;
-        color: var(--colorBackground);
-        background-color: var(--colorText);
+        background-color: black;
         transition: 0.1s;
         cursor: pointer;
         // border: 3px solid white;
@@ -30,8 +25,15 @@ $button-width: 180px;
             }
         }
 
-        &.active{
-            left: -20px;
+        img{
+            width: 40px;
+            height: 40px;
+            // background-image: url('../../../assets/icons/link.svg');
+            filter: invert(100%);
+        }
+
+        .option-img-1{
+            
         }
 
         &:hover{
