--- a/src/styles.scss
+++ b/src/styles.scss
@@ -43,7 +43,8 @@ html{
     --bigText: calc(1.2rem + 0.1vw);
     --biggestText: calc(1.5rem + 0.1vw);
 
-    --colorBackground: rgb(41, 41, 41);
+    --colorBackground: rgb(36, 36, 36);
+    --colorBackgroundSecondary: rgb(70, 70, 70);
     --colorPrimary: #f7f7f7;
     --colorSecondary: #2e2e2e;
     --colorText: #e2e2e2;
