--- a/src/app/user/welcome/section1-impression/section1-impression.component.html
+++ b/src/app/user/welcome/section1-impression/section1-impression.component.html
@@ -5,7 +5,7 @@
             class="option" 
             [ngClass]="selectedOption === i ? 'active':'inactive'"
             (mouseover)="hoverOption(i)"
-            [routerLink]="['work']">{{option}}</a>
+            [routerLink]="[option.toLowerCase()]">{{option}}</a>
         </li>
         <div class="menu-background">
             <span 
