--- a/src/app/user/work/carousel/carousel.component.scss
+++ b/src/app/user/work/carousel/carousel.component.scss
@@ -35,6 +35,10 @@ main{
             position: relative;
         }
 
+        &:not(:hover){
+            // transform: none !important;
+        }
+
         &.inactive{
             // box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.082);
             border: 3px solid rgb(0, 0, 0);
@@ -89,8 +93,8 @@ main{
         align-items: center;
         flex-direction: column;
         transition: 0.2s;
-        // box-shadow: $shadow;
-        // background: $background;
+        box-shadow: $shadow;
+        background: $background-light;
         color: rgb(255, 255, 255);
         // background: linear-gradient(rgb(54, 54, 54), var(--colorBackgroundSecondary));
 
@@ -105,7 +109,7 @@ main{
             top: calc(#{$padding} - #{$border-width} / 2);
             border: $border-width solid white;
             // box-shadow: $shadow;
-            // background-color: $background-light;
+            background-color: $background-light;
             z-index: -1;
             border-radius: 10px;
         }
