--- a/src/app/user/nav/nav.component.scss
+++ b/src/app/user/nav/nav.component.scss
@@ -114,10 +114,10 @@
         .square{
             width: 120px;
             height: 120px;
-            background-color: var(--colorBackground);
+            background-color: var(--colorBackgroundSecondary);
             transition: 0.2s ease;
             flex-grow: 1;
-            border: 3px solid black;
+            border: 3px solid var(--colorBackground);
 
             &.active{
 
