--- a/src/app/user/post/post.component.html
+++ b/src/app/user/post/post.component.html
@@ -1,1 +1,16 @@
-<p>post works!</p>
+
+<canvas id="canvas"></canvas>
+<div class="post">
+    <div class="title">An example post</div>
+    <div class="tags">
+        <div class="tag">TAG</div>
+    </div>
+    <div class="date">12-07-2000</div>
+    <div class="content">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo vel est earum? Sequi sit atque magni iure aspernatur quas quisquam, ex, maxime, voluptatibus reprehenderit culpa enim doloribus consectetur ducimus blanditiis itaque explicabo eos consequatur temporibus molestias. Culpa et illo laudantium harum, unde itaque, sint repudiandae reiciendis, ipsa molestias tempore alias.
+        <br><br>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. In harum officia inventore architecto ullam beatae delectus maxime modi consequuntur enim atque, quas ut fugit, officiis iste exercitationem nihil aliquam pariatur dicta optio, reprehenderit a? Reiciendis unde, quis eum, repellendus quod, voluptatibus repudiandae consequuntur quae ut earum nemo eaque optio autem delectus ea incidunt placeat temporibus facilis laudantium non? Voluptate cum cupiditate at pariatur facere illum quibusdam numquam. Dolore, temporibus dolorum?
+    </div>
+    <div class="reactions"></div>
+    <div class="comments"></div>
+</div>
