--- a/src/app/user/posts/posts.component.html
+++ b/src/app/user/posts/posts.component.html
@@ -59,7 +59,7 @@
             <img src="assets/app-images/pathfinding.png" alt="" class="image-background">
             <div class="title">Post title</div>
             <div class="description">Post quick description, what to expect</div>
-            <button class="read">
+            <button class="read" (click)="goToPost('1')">
                 Read
             </button>
         </div>
